Finished up testing methods in group object in user_microservice