@@ -1,5 +1,7 @@
 package nl.tudelft.sem.template.objects;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
@@ -19,7 +21,7 @@ public class GroupTest {
         user2 = new User("2", "password2", "FirstName2", "LastName2");
         user3 = new User("3", "password3", "FirstName3", "LastName3");
         user4 = new User("4", "password4", "FirstName4", "LastName4");
-        group = new Group(1L, "1", "TestGroup", List.of(user1, user2));
+        group = new Group(1L, "1", "TestGroup", new ArrayList<>(Arrays.asList(user1, user2)));
     }
 
     @Test
@@ -43,6 +45,24 @@ public class GroupTest {
         Assertions.assertThat(group.getGroupName()).isEqualTo("NewGroupName");
     }
 
+    @Test
+    void getSecretaryTest() {
+        Assertions.assertThat(group.getSecretary()).isEqualTo("1");
+    }
+
+    @Test
+    void addMemberTest() {
+        Assertions.assertThat(group.getMembers()).isEqualTo(new ArrayList<>(Arrays.asList(user1, user2)));
+        Assertions.assertThat(group.addMember(user3)).isTrue();
+        Assertions.assertThat(group.getMembers()).isEqualTo(new ArrayList<>(Arrays.asList(user1, user2, user3)));
+    }
+
+    @Test
+    void removeMemberTest() {
+        Assertions.assertThat(group.getMembers()).isEqualTo(new ArrayList<>(Arrays.asList(user1, user2)));
+        Assertions.assertThat(group.removeMember(user2)).isTrue();
+        Assertions.assertThat(group.getMembers()).isEqualTo(new ArrayList<>(Arrays.asList(user1)));
+    }
 
     @Test
     void equalsTestTrue() {
@@ -56,4 +76,5 @@ public class GroupTest {
         Assertions.assertThat(group.equals(g)).isFalse();
 
     }
+
 }
